# git-commit

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/errors/: mod.rs  read_file_error.rs
src/types/: args.rs  chat_request.rs  chat_response.rs  choice.rs  config.rs  mod.rs
src/utils/: create_git_commit.rs  get_commit_from_deepseek.rs  get_git_dif.rs  is_git_repo.rs  mod.rs  read_config.rs  read_guideline.rs  run_pre_commits.rs  validate_commit_message.rs
